# refbooks

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pyci.yml
refbooks_keeper/: asgi.py  settings.py  urls.py  wsgi.py
refbooks_keeper/fixtures/: elements.json  refbooks.json  users.json  versions.json
refbooks_keeper/refbooks/: admin.py  apps.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
refbooks_keeper/refbooks/migrations/: 0001_initial.py  0002_alter_element_version_alter_version_refbook.py  0003_rename_version_element_version.py  0004_refbook_owner.py  0005_rename_name_element_value.py
